--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -1,59 +1,64 @@
 {% extends 'catalog/base.html' %}
-{% load my_tags %}
+
 {% block content %}
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Skystore</h1>
-    <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
-        продать</p>
-</div>
-
-
-<div class="col-md-12 text-center">
-    {% if perms.catalog.add_product %}
-    <a class="btn btn-btn btn-primary" href="{% url 'catalog:create_product' %}">
-        Добавить позицию
-    </a>
-    {% endif %}
-</div>
-
-<div class="container">
-    <div class="col-3">
-        <div class="card mb-4 box-shadow">
-            <img class="card-img-top"
-                 src="{{ object.preview_img|mymedia }}"
-                 alt="Card image cap">
-            <div class="card-header">
-                <h4 class="my-0 font-weight-normal">{{object.product_name}}</h4>
-            </div>
-            <div class="card-body">
-                <h1 class="card-title pricing-card-title"> Цена: $ {{object.price}}</h1>
-                <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                    <li>- Категория: {{object.category}}</li>
-                    <li>- Дата изготовления: {{object.creation_date}}</li>
-                    <li>- Создатель: {{object.owner|default:"Без владельца"}}</li>
-                    {% for form in formset %}
-                    {% if form.product == object and form.version_sing == True %}
-                    <h2>Активная версия</h2>
-                    <li>- Название версии: {{ form.version_name }}</li>
-                    <li>- Номер версии: {{ form.version_number }}</li>
-                    {% endif %}
-                    {% endfor %}
-                </ul>
-                <a href="{% url 'catalog:product_card' object.pk %}" type="button"
-                   class="btn btn-lg btn-sm btn-outline-primary">Подробнее</a>
-                {% if perms.catalog.change_product %}
-                <a href="{% url 'catalog:update_product' object.pk %}" type="button"
-                   class="btn btn-lg btn-sm btn-outline-secondary">Изменить</a>
-                {% endif %}
-                {% if perms.catalog.delete_product %}
-                <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
-                   class="btn btn-lg btn-sm btn-outline-danger">Удалить</a>
-                {% endif %}
-            </div>
-        </div>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Skystore</h1>
+        <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
+            продать</p>
     </div>
-</div>
+
+    <div class="container">
+        <div class="row">
+            {% for product in products %}
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-header">
+                        <h4 class="my-0 font-weight-normal">{{ product.name }}</h4>
+                        <img src="#" alt="Картинка" width="200" height="200" />
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title pricing-card-title">$ {{ product.price }}</h1>
+                        <ul class="list-unstyled mt-3 mb-4 text-start m-3">
+                            <li>{{ product.description }}</li>
+                        </ul>
+                        <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+
+        <footer class="pt-4 my-md-5 pt-md-5 border-top">
+            <div class="row">
+                <div class="col-12 col-md">
+                    SkyStore
+                    <small class="d-block mb-3 text-muted">&copy; 2023</small>
+                </div>
+                <div class="col-6 col-md">
+                    <h5>Категории</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#">Рассылки</a></li>
+                        <li><a class="text-muted" href="#">Телеграм боты</a></li>
+                        <li><a class="text-muted" href="#">Полезные утилиты</a></li>
+                        <li><a class="text-muted" href="#">Веб-приложения</a></li>
+                        <li><a class="text-muted" href="#">Микросервисы</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md">
+                    <h5>Дополнительно</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#">Мы пишем</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md">
+                    <h5>О нас</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#">Контакты</a></li>
+                        <li><a class="text-muted" href="#">Вакансии</a></li>
+                        <li><a class="text-muted" href="#">Условия использования</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </div>
 {% endblock %}
-
-
-
